--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.37",
     "gatsby-plugin-styled-components": "^3.0.7",
+    "gatsby-remark-images": "^3.0.11",
     "gatsby-remark-images-contentful": "^2.0.11",
     "gatsby-source-contentful": "^2.0.61",
     "gatsby-source-filesystem": "^2.0.33",
+    "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "^2.1.19",
     "netlify-cms": "^2.9.1",
     "prop-types": "^15.7.2",
