--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^13.4.0",
+    "@contentful/rich-text-react-renderer": "^13.4.0",
     "babel-plugin-styled-components": "^1.10.0",
     "contentful": "^7.6.0",
-    "gatsby": "^2.4.3",
+    "gatsby": "^2.18.6",
+    "gatsby-cli": "^2.8.15",
     "gatsby-image": "^2.0.41",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-netlify-cms": "^4.0.1",
